drop rows with missing vehicle and participant

--- a/Week4/week4.ipynb
+++ b/Week4/week4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "There are crash has not vehicle\n",
-      "All crash has ID!\n"
+      "There are crash has not participant!!\n"
      ]
     }
    ],
@@ -23,10 +23,10 @@
     "else:\n",
     "    print(\"All crash has vehicle\")\n",
     "\n",
-    "if data['Crash ID'].isnull().values.any():\n",
-    "    print(\"There are crash has not ID!!\")\n",
+    "if data['Participant ID'].isnull().values.any():\n",
+    "    print(\"There are crash has not participant!!\")\n",
     "else:\n",
-    "    print(\"All crash has ID!\")"
+    "    print(\"All crash has a particitpant!\")"
    ]
   },
   {
