--- a/Week5/week5.ipynb
+++ b/Week5/week5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "4  http://www.flickr.com/photos/britishlibrary/ta...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,6 +142,321 @@
     "#                         archive_name='out.csv')  \n",
     "# data.to_csv('out.zip', index=False,\n",
     "#           compression=compression_opts)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      1879\n",
+       "1      1868\n",
+       "2      1869\n",
+       "3      1851\n",
+       "4      1857\n",
+       "       ... \n",
+       "124    1837\n",
+       "125    1863\n",
+       "126     NaN\n",
+       "127    1884\n",
+       "128    1894\n",
+       "Name: Date of Publication, Length: 129, dtype: object"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regex = r'^(\\d{4})'\n",
+    "extr = data['Date of Publication'].str.extract(regex, expand=False)\n",
+    "extr.head(129)\n",
+    "\n",
+    "# regex1 = r\"^([a-zA-Z\\u0080-\\u024F]+(?:(\\. )|-| |'))*[a-zA-Z\\u0080-\\u024F]*$\"\n",
+    "# extr1 = data['Place of Publication'].str.extract(regex1, expand=False)\n",
+    "# extr1.head(129)\n",
+    "\n",
+    "# import re\n",
+    "# data_ti1 = data['Place of Publication']\n",
+    "# for d in data_ti1:\n",
+    "#     print(d)\n",
+    "#     if \"[\" in d and \"]\" in d:\n",
+    "#         d = re.sub(\"[\\(\\[].*?[\\)\\]]\", \"\", d)\n",
+    "#     if \",\" in d:\n",
+    "#         d = d.replace(\",\",\"\")\n",
+    "#     if \"pp\" in d:\n",
+    "#         d = \"nan\"\n",
+    "#     print(d)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>City</th>\n",
+       "      <th>University</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Auburn</td>\n",
+       "      <td>Auburn University</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Florence</td>\n",
+       "      <td>University of North Alabama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Jacksonville</td>\n",
+       "      <td>Jacksonville State University</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Livingston</td>\n",
+       "      <td>University of West Alabama</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>Montevallo</td>\n",
+       "      <td>University of Montevallo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>512</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>River</td>\n",
+       "      <td>University of Wisconsin–River Falls</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>513</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Stevens</td>\n",
+       "      <td>University of Wisconsin–Stevens Point</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>514</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Waukesha</td>\n",
+       "      <td>Carroll University</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>515</th>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>Whitewater</td>\n",
+       "      <td>University of Wisconsin–Whitewater</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>516</th>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>Laramie</td>\n",
+       "      <td>University of Wyoming</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>517 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         State          City                             University\n",
+       "0      Alabama        Auburn                      Auburn University\n",
+       "1      Alabama      Florence            University of North Alabama\n",
+       "2      Alabama  Jacksonville          Jacksonville State University\n",
+       "3      Alabama    Livingston             University of West Alabama\n",
+       "4      Alabama    Montevallo               University of Montevallo\n",
+       "..         ...           ...                                    ...\n",
+       "512  Wisconsin         River    University of Wisconsin–River Falls\n",
+       "513  Wisconsin       Stevens  University of Wisconsin–Stevens Point\n",
+       "514  Wisconsin      Waukesha                     Carroll University\n",
+       "515  Wisconsin    Whitewater     University of Wisconsin–Whitewater\n",
+       "516    Wyoming       Laramie                  University of Wyoming\n",
+       "\n",
+       "[517 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "list = []\n",
+    "with open(\"uniplaces.txt\") as fp:\n",
+    "    Lines = fp.readlines()\n",
+    "    temp = ''\n",
+    "    for line in Lines:\n",
+    "        if \"[edit]\" in line:\n",
+    "            temp = line.replace(\"[edit]\\n\",\"\")\n",
+    "        else:\n",
+    "            sub_list = []\n",
+    "            sub_list.append(temp)\n",
+    "            sub_list.append(line[:line.index(\" \")])\n",
+    "            sub_list.append(line[line.find('(')+1:line.find(')')])\n",
+    "            list.append(sub_list)\n",
+    "   \n",
+    "df = pd.DataFrame(list, columns =['State','City','University'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     1\n",
+       "1     1\n",
+       "2     1\n",
+       "3     1\n",
+       "4     1\n",
+       "5     1\n",
+       "6     1\n",
+       "7     1\n",
+       "8     1\n",
+       "9     1\n",
+       "10    1\n",
+       "11    1\n",
+       "12    1\n",
+       "13    1\n",
+       "14    1\n",
+       "15    1\n",
+       "16    1\n",
+       "17    1\n",
+       "18    1\n",
+       "19    1\n",
+       "20    1\n",
+       "21    2\n",
+       "22    2\n",
+       "23    1\n",
+       "24    1\n",
+       "25    1\n",
+       "26    1\n",
+       "27    1\n",
+       "28    1\n",
+       "29    1\n",
+       "30    1\n",
+       "31    1\n",
+       "32    4\n",
+       "33    4\n",
+       "Name: OCCURRENCES, dtype: object"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"trimet_03411_2.csv\")\n",
+    "data = pd.DataFrame(df.values.repeat(df.OCCURRENCES, axis=0), columns=df.columns)\n",
+    "data['OCCURRENCES'].head(34)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      Y\n",
+       "1      Y\n",
+       "2      Y\n",
+       "3      Y\n",
+       "4      Y\n",
+       "      ..\n",
+       "165    Y\n",
+       "166    Y\n",
+       "167    Y\n",
+       "168    Y\n",
+       "169    Y\n",
+       "Name: VALID_FLAG, Length: 170, dtype: object"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.fillna('Y')\n",
+    "data['VALID_FLAG'].head(170)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      26200.0\n",
+       "1      26205.0\n",
+       "2      26210.0\n",
+       "3      26215.0\n",
+       "4      26220.0\n",
+       "        ...   \n",
+       "423    28542.0\n",
+       "424    28542.0\n",
+       "425    28542.0\n",
+       "426    28542.0\n",
+       "427    28542.0\n",
+       "Name: ARRIVE_TIME, Length: 428, dtype: object"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['ARRIVE_TIME'].interpolate()\n",
+    "data['ARRIVE_TIME'].head(428)"
    ]
   }
  ],
