--- a/Week5/week5.ipynb
+++ b/Week5/week5.ipynb
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -409,27 +409,29 @@
        "3      Y\n",
        "4      Y\n",
        "      ..\n",
-       "165    Y\n",
-       "166    Y\n",
-       "167    Y\n",
-       "168    Y\n",
-       "169    Y\n",
-       "Name: VALID_FLAG, Length: 170, dtype: object"
+       "170    Y\n",
+       "171    Y\n",
+       "172    Y\n",
+       "173    Y\n",
+       "174    Y\n",
+       "Name: VALID_FLAG, Length: 175, dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.fillna('Y')\n",
-    "data['VALID_FLAG'].head(170)"
+    "data = df.fillna(method='ffill')\n",
+    "# values = {'VALID_FLAG':'Y'}\n",
+    "# df.fillna(method=\"ffill\")\n",
+    "data['VALID_FLAG'].head(175)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -441,22 +443,22 @@
        "3      26215.0\n",
        "4      26220.0\n",
        "        ...   \n",
-       "423    28542.0\n",
-       "424    28542.0\n",
-       "425    28542.0\n",
-       "426    28542.0\n",
-       "427    28542.0\n",
-       "Name: ARRIVE_TIME, Length: 428, dtype: object"
+       "423    29899.0\n",
+       "424    29904.0\n",
+       "425    29909.0\n",
+       "426    29914.0\n",
+       "427    29919.0\n",
+       "Name: ARRIVE_TIME, Length: 428, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data['ARRIVE_TIME'].interpolate()\n",
-    "data['ARRIVE_TIME'].head(428)"
+    "data = df['ARRIVE_TIME'].interpolate()\n",
+    "data.head(428)"
    ]
   }
  ],
